crates/cuda-oxide/crates/cuda-device/tests/compile_fail/thread_index_device_return.stderr
error[E0515]: cannot return reference to temporary value
 --> tests/compile_fail/thread_index_device_return.rs:8:1
  |
8 | #[device]
  | ^^^^^^^^^ returns a reference to data owned by the current function
  |
  = note: this error originates in the attribute macro `device` (in Nightly builds, run with -Z macro-backtrace for more info)
